@@ -360,8 +360,28 @@ if ( $ALLOW_COLOR_CUSTOMIZATION == 'Y' ) { ?>
 </td></tr>
 <tr><td class="tooltip" title="<?php etooltip( 'display-week-starts-on' )?>">
  <?php etranslate( 'Week starts on' )?>:</td><td>
- <?php echo print_radio_html ( 'WEEK_START' , '' , '0', '1', 
-    translate( 'Sunday' ), translate( 'Monday' ) ) ?>
+ <select name="pref_WEEK_START" id="pref_WEEK_START">
+<?php
+ for ( $i = 0; $i < 7; $i++ ) {
+  echo "<option value=\"$i\"" .
+   ( $i == $prefarray['WEEK_START'] ? $selected : '' ) .
+   ">" . translate( weekday_name( $i ) ) . "</option>\n";
+ }
+?>
+ </select>
+</td></tr>
+<tr><td class="tooltip" title="<?php etooltip( 'display-weekend-starts-on' )?>">
+ <?php etranslate( 'Weekend starts on' )?>:</td><td>
+ <select name="pref_WEEKEND_START" id="pref_WEEKEND_START">
+<?php
+ for ( $i = -1; $i < 6; $i++ ) {
+  $j = ( $i == -1 ? 6 : $i ); //make sure start with Saturday
+  echo "<option value=\"$j\"" .
+   ( $j == $prefarray['WEEKEND_START'] ? $selected : '' ) .
+   ">" . translate( weekday_name( $j ) ) . "</option>\n";
+ }
+?>
+ </select>
 </td></tr>
 <tr><td class="tooltip" title="<?php etooltip( 'work-hours-help' )?>">
  <?php etranslate( 'Work hours' )?>:</td><td>
